--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,13 @@ html {
   font-family: Verdana, Arial;
   font-size: 12px;
 }
+
+
+body {
+
+  @media (min-width: 960px) {
+    width: 960px;
+    margin: 0 auto;
+  }
+  
+}
