--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -17,9 +17,7 @@ html {
   }
 }
 
-
-.m-mode {
-  padding: 1em;
-  background: #9cf;
-  min-height: 3em;
+.expression {
+  display: flex;
+  align-items: center;
 }
