--- a/src/app/tree/styles.css
+++ b/src/app/tree/styles.css
@@ -1,11 +1,3 @@
-.m-tree {
-  padding: 1em;
-}
-
-.m-tree__value {
-  margin-bottom: 1em;
-}
-
-.m-tree__steps {
-  padding-left: 3em;
+.m-tree__item {
+  padding: 0 .5em;
 }
